removendo styled component e instalando sass

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,16 +1,14 @@
-import styled from 'styled-components';
-
-export const Rodape = styled.footer`
+.rodape {
   display: flex;
   width: 100%;
   background-color: #fc0;
   border-top: 5px solid #0a3b7a;
   padding: 20px 0;
   margin-top: 50px;
-`;
+}
 
-export const Logo = styled.div`
+.logo {
   display: flex;
   align-items: center;
   justify-content: center;
-`;
+}
