--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -16,3 +16,8 @@ a {
 body, input, textarea, select, button{
   font: 400 1rem 'Poppins', sans-serif;
 }
+
+img{
+  max-width: 100%;
+  display: block;
+}
