--- a/src/styles/estilo.module.scss
+++ b/src/styles/estilo.module.scss
@@ -1,9 +1,15 @@
-import styled from 'styled-components';
-
-export const MainContainer = styled.div`
+.container{  
   max-width: 1100px;
   padding: 0 15px;
   margin: auto;
+
+  h1 {
+    font-size: 1.5rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #000;
+    text-align: center;
+  }
 
   h2 {
     font-size: 1.5rem;
@@ -18,9 +24,9 @@ export const MainContainer = styled.div`
       }
     }
   }
-`;
+}
 
-export const Pagination = styled.div`
+.pagination{
   display: flex;
   margin-top: 30px;
   width: 100%;
@@ -46,9 +52,9 @@ export const Pagination = styled.div`
       opacity: 0.8;
     }
   }
-`;
+}
 
-export const SearchBox = styled.div`
+.searchbox{
   display: flex;
   align-items: center;
   margin-top: 50px;
@@ -117,4 +123,4 @@ export const SearchBox = styled.div`
       cursor: pointer;
     }
   }
-`;
+}
